--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "socket.io": "^4.7.2"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
     "utf-8-validate": "^5.0.10"
